<resources>
    <string name="app_name">SL Calendar</string>
    <string name="all_holiday">නිවාඩු දින</string>
    <string name="awurudu_charithra">අවුරුදු සිරිත් විරිත්</string>
    <string name="rahu">රාහු කාලය</string>
    <string name="theme">තේමා</string>
    <string name="remind">සිහිකැඳ වීම්</string>
    <string name="banner_ad_id">ca-app-pub-3505600525587058/2806764307</string>
    <string name="inst_ad_id">NOT_CONFIG</string>
    <string name="ads_app_id">ca-app-pub-3505600525587058~1876826014</string>
    <string name="yes">ඔව්</string>
    <string name="no">නැත</string>
    <string name="sms_msg">ඔබේ පෙම්වතා/ පෙම්වතිය, පවුලේ අය, යහලුවන් සිටින තැන SMS එකක් මගින් දැන ගනීමට කැමතිද? (සොයන්නාගේ කැමත්ත මත පමණක් ලබා ගත හැක. දෙදෙනාම ලියාපදිංචි විය යුතුය. )</string>
    <string name="sms_msg_ex">දිනපතා රාහු කාලය හා සතියේ සුබ නැකත් SMS මගින් දැන ගැනීමට කැමතිද?</string>


    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Title</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
</resources>
