<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/power"
        android:icon="@drawable/ic_power"
        android:title="@string/app_name"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/all_holiday"
        android:icon="@drawable/ic_power"
        android:title="@string/all_holiday"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/awurudu_charithra"
        android:icon="@drawable/ic_power"
        android:title="@string/awurudu_charithra"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/rahu"
        android:icon="@drawable/ic_power"
        android:title="@string/rahu"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/theme"
        android:icon="@drawable/ic_power"
        android:title="@string/theme"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/reminder"
        android:icon="@drawable/ic_power"
        android:title="@string/remind"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>